# OrbitTrack

./: .gitignore  generate-flatpak-sources.sh  io.github.caldavtimetrack.desktop  io.github.caldavtimetrack.metainfo.xml  io.github.caldavtimetrack.yml  io.github.jye16.OrbitTrack.desktop  io.github.jye16.OrbitTrack.metainfo.xml  io.github.jye16.OrbitTrack.yml  pyproject.toml  python3-six.yaml  run.sh
caldav_time_track_gtk/: __init__.py  caldav_service.py  config.py  main.py
caldav_time_track_gtk/views/: calendar_view.py  login_view.py  tasks_view.py  timer_overlay.py  today_view.py
caldav_time_track_gtk/windows/: main_window.py
orbittrack/: __init__.py  cache.py  caldav_service.py  config.py  main.py
orbittrack/views/: login_view.py  tasks_view.py  timer_overlay.py  today_view.py
orbittrack/windows/: main_window.py
scripts/: build-flatpak.sh  build-rpm.sh  install.sh
