[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "caldav-time-track-gtk"
version = "1.0.0"
description = "GTK4/Libadwaita CalDAV time tracker for GNOME"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "caldav>=1.3.9",
    "vobject>=0.9.6",
    "requests>=2.31",
    "lxml>=5.0",
]

[project.scripts]
caldav-time-track = "caldav_time_track_gtk.main:main"

[project.gui-scripts]
caldav-time-track-gtk = "caldav_time_track_gtk.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["caldav_time_track_gtk*"]

[tool.setuptools.package-data]
"caldav_time_track_gtk" = ["data/*"]
