[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbittrack"
version = "1.0.0"
description = "GTK4/Libadwaita CalDAV task time tracker for GNOME"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "caldav>=1.3.9",
    "vobject>=0.9.6",
    "requests>=2.31",
    "lxml>=5.0",
]

[project.scripts]
orbittrack = "orbittrack.main:main"

[project.gui-scripts]
orbittrack = "orbittrack.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orbittrack*"]

[tool.setuptools.package-data]
"orbittrack" = ["data/*"]
